v10.3.0/_sources/generated/pcdsdevices.mirror.FFMirrorZ.rst.txt
pcdsdevices.mirror.FFMirrorZ
============================

.. currentmodule:: pcdsdevices.mirror

.. autoclass:: FFMirrorZ

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:X``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Y``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - pitch
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:PITCH``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Z``
          - 
          - hinted
          - 
    
        * - mirror_temp_l
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:CHIN:L:TEMP``
          - mirror temperature left chin guard
          - normal
          - 
    
        * - mirror_temp_r
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:CHIN:R:TEMP``
          - mirror temperature right chin guard
          - normal
          - 
    
        * - mirror_temp_tail
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:TAIL:TEMP``
          - mirror temperature tail
          - normal
          - 
    
        * - x_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:X:RMS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - y_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:Y:RMS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - z_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:Z:RMS``
          - 
          - normal
          - 
    
        * - pitch_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:PITCH:RMS``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - cool_flow1
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:FWM:1_RBV``
          - Axilon Panel Flow Meter Loop 1
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    
        * - cool_press
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:PRSM:1_RBV``
          - Axilon Panel Pressure Meter
          - normal
          - Inherited from :class:`~pcdsdevices.mirror.FFMirror`
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: coating
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: cool_flow2
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    